--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -19,7 +19,7 @@ jobs:
     env:
       configuration: release
     steps:
-    - name: Checkout sources
+    - name: Checkout Sources
     - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v2.0.0
