--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -20,7 +20,7 @@ jobs:
       configuration: release
     steps:
     - name: Checkout Sources
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v2.0.0
       with:
