Add RG-Job to Azure login workflow

--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -45,3 +45,7 @@ jobs:
         name: templates_artifact
         path: ./templates/*
         retention-days: 30
+  RG-Job:
+    runs-on: Login to Azure
+    
+    
