--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -58,4 +58,4 @@ jobs:
         uses: Azure/cli@v1
         with:
           inlineScript:
-            az group create --name ${{ nv.AZURE_RG }} --location ${{ env.AZURE_LOCATION }}
+            az group create --name ${{ env.AZURE_RG }} --location ${{ env.AZURE_LOCATION }}
