--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 env:
-      AZURE_RG: github-actions-staged
+      AZURE_RG: github-actions-staged-simon
       AZURE_SUBSCRIPTION: <<REPLACE>>
       AZURE_LOCATION: eastUS
 jobs:
