--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -13,6 +13,7 @@ env:
       AZURE_RG: github-actions-staged-simon
       AZURE_SUBSCRIPTION: <<REPLACE>>
       AZURE_LOCATION: eastUS
+      AZURE_WEBAPP_NAME: <<REPLACE>>-mywebapp-dev
 jobs:
   Build-Job:
     runs-on: ubuntu-latest
@@ -59,3 +60,18 @@ jobs:
         with:
           inlineScript:
             az group create --name ${{ env.AZURE_RG }} --location ${{ env.AZURE_LOCATION }}
+  Dev-Job:
+    runs-on: ubuntu-latst
+    environment: development
+    needs: [RG-Job]
+    steps:
+      - name: Download Templates
+        uses: actions/download-artifact@v3
+        with:
+          name: templates_artifact
+          path: ${{ runner.temp }}/templates
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
