--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -74,4 +74,13 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy BICEP template
+        uses: azure/arm-deploy@v1
+        id: deploywebappd
+        with:
+          deploymentName: create-webapp
+          subscriptionId: ${{ env.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ env.AZURE_RG }}
+          template: ${{ runner.temp }}/templates/webapp.bicep
+          parameters: location=${{ ENV.AZURE_LOCATION }} appName=${{env.AZURE_WEBAPP_NAME}}
       
