--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -83,4 +83,50 @@ jobs:
           resourceGroupName: ${{ env.AZURE_RG }}
           template: ${{ runner.temp }}/templates/webapp.bicep
           parameters: location=${{ ENV.AZURE_LOCATION }} appName=${{env.AZURE_WEBAPP_NAME}}
-      
+      - name: Download Publish
+        uses: actions/donwload-artifact@v3
+        with:
+          name: publish_artifact
+          path: ${{ runner.temp }}/publish
+      - name: Azure WebApp
+        uses: Azure/webapps-deploy@v2
+        with:
+          app-name: ${{ steps.deploywebappd.outputs.webappname }}
+          # app-name: ${{ env.AZURE-_WEBAPP_NAME }}
+          package: ${{ runner.temp }}/publish
+  Prod-Job:
+    runs-on: ubuntu-latst
+    environment: production
+    needs: [Dev-Job]
+    env:
+      AZURE_WEBAPP_NAME: <<REPLACE>>-mywebapp-prod
+    steps:
+      - name: Download Templates
+        uses: actions/download-artifact@v3
+        with:
+          name: templates_artifact
+          path: ${{ runner.temp }}/templates
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy BICEP template
+        uses: azure/arm-deploy@v1
+        id: deploywebapp
+        with:
+          deploymentName: create-webapp
+          subscriptionId: ${{ env.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ env.AZURE_RG }}
+          template: ${{ runner.temp }}/templates/webapp.bicep
+          parameters: location=${{ ENV.AZURE_LOCATION }} appName=${{env.AZURE_WEBAPP_NAME}}
+      - name: Download Publish
+        uses: actions/donwload-artifact@v3
+        with:
+          name: publish_artifact
+          path: ${{ runner.temp }}/publish
+      - name: Azure WebApp
+        uses: Azure/webapps-deploy@v2
+        with:
+          app-name: ${{ steps.deploywebapp.outputs.webappname }}
+          # app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: ${{ runner.temp }}/publish
